Filter questions by topic id
